WebKit doesn't build with trunk clang https://bugs.webkit.org/show_bug.cgi?id=202511

Reviewed by Anders Carlsson.

* Modules/fetch/FetchLoader.h:
* Modules/geolocation/Geolocation.h:
* Modules/indexeddb/IDBTransaction.h:
* Modules/indexeddb/shared/InProcessIDBServer.cpp:
* Modules/indexeddb/shared/InProcessIDBServer.h:
* Modules/notifications/Notification.cpp:
* Modules/notifications/Notification.h:
* platform/graphics/ca/TileController.h:
* workers/service/context/ServiceWorkerThreadProxy.h:
Fix the build by exporting destructors and custom delete operators.
I don't know why this changed, but trunk clang insists.
There are also some new warnings; this only fixes the hard errors.


Canonical link: https://commits.webkit.org/216020@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250661 268f45cc-cd09-0410-ab3c-d52691b4dbfc