Source/WebCore/Modules/notifications/Notification.cpp
@@ -74,7 +74,7 @@ Notification::Notification(Document& document, const String& title, const Option
     m_taskTimer->startOneShot(0_s);
 }
 
-Notification::~Notification()  = default;
+Notification::~Notification() = default;
 
 void Notification::show()
 {
